Fix awkward checkbox wrapping.

--- a/client/src/components/FieldGroup/FieldGroup.scss
+++ b/client/src/components/FieldGroup/FieldGroup.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
 
-    @media only screen and (max-width: 52.125em) {
+    @media only screen and (max-width: 75em) {
         flex-direction: column;
         align-items: flex-start;
     }
